--- a/Train_and_Generate_StyleGAN2.ipynb
+++ b/Train_and_Generate_StyleGAN2.ipynb
@@ -65,7 +65,7 @@
         "id": "5YcUMPQp6ipP"
       },
       "source": [
-        "# 1. Install Repo to Google Drive\n",
+        "# 1. Clone repos to Google Drive\n",
         "\n",
         "---\n",
         "\n",
@@ -96,21 +96,52 @@
         "\n",
         "if not os.path.isdir(\"/content/drive/MyDrive/git\"):\n",
         "  !mkdir /content/drive/MyDrive/git\n",
-        "\n",
         "%cd git\n",
+        "\n",
+        "stylegan2_gitdir=\"/content/drive/MyDrive/git/stylegan2-ada\"\n",
         "if not os.path.isdir(\"/content/drive/MyDrive/git/stylegan2-ada\"):\n",
         "  !git clone https://github.com/dvschultz/stylegan2-ada\n",
-        "  !mkdir stylegan2-ada/downloads\n",
-        "  !mkdir stylegan2-ada/datasets\n",
         "else:\n",
-        "  %cd \"/content/drive/MyDrive/git/stylegan2-ada\"\n",
+        "  %cd \"{stylegan2_gitdir}\"\n",
         "  !git pull origin master\n",
         "\n",
-        "if not os.path.isdir(\"/content/drive/MyDrive/git/ganart\"):\n",
+        "ganart_gitdir=\"/content/drive/MyDrive/git/ganart\"\n",
+        "if not os.path.isdir({ganart_gitdir}):\n",
         "  !git clone https://github.com/jkweh/ganart\n",
         "else:\n",
-        "  %cd \"/content/drive/MyDrive/git/ganart\"\n",
-        "  !git pull origin master"
+        "  %cd \"{ganart_gitdir}\"\n",
+        "  !git pull origin master\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tTTrblLWOhvQ"
+      },
+      "source": [
+        "And then finally create the recommended directory tree"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XjGd22wpOmD0"
+      },
+      "source": [
+        "base_path = \"/content/drive/MyDrive\"\n",
+        "project_name=\"\"\n",
+        "\n",
+        "dataset_dir=f\"{base_path}/datasets/{project_name}\"\n",
+        "!mkdir -p {dataset_dir}\n",
+        "\n",
+        "training_dir=f\"{base_path}/gan/training/{project_name}\"\n",
+        "!mkdir -p {training_dir}\n",
+        "\n",
+        "outdir=f\"{base_path}/gan/data/outdir/{project_name}\"\n",
+        "!mkdir -p {outdir}"
       ],
       "execution_count": null,
       "outputs": []
@@ -122,7 +153,7 @@
       },
       "source": [
         "# 2. Scrape and pre-process\n",
-        "---"
+        "---\n"
       ]
     },
     {
@@ -141,10 +172,10 @@
       },
       "source": [
         "import os\n",
-        "if os.path.isdir(\"/content/drive/MyDrive/ganart\"):\n",
-        "  %cd \"/content/drive/MyDrive/ganart\"\n",
-        "  !git pull\n",
-        "  !python3 ./scrape-wikiart-by-genre.py"
+        "if os.path.isdir({ganart_gitdir}):\n",
+        "  %cd {ganart_gitdir}\n",
+        "  !python3 ./scrape-wikiart-by-genre.py --outdir {outdir}\n",
+        "  dl_dir=f\"{outdir}/dl\""
       ],
       "execution_count": null,
       "outputs": []
@@ -197,13 +228,10 @@
         "id": "T-BZHhBe7AvO"
       },
       "source": [
-        "%cd \"/content/drive/MyDrive/git/stylegan2-ada\"\n",
-        "# Update this to the path to your image folder.\n",
-        "dataset_path = \"/content/drive/MyDrive/training/popart_minimalism_kitsch\"\n",
-        "# Give your dataset a name.\n",
-        "dataset_name = \"popart_minimalism_kitsch\"\n",
+        "%cd stylegan2_gitdir\n",
         "\n",
-        "!python dataset_tool.py create_from_images ./datasets/{dataset_name} {dataset_path}"
+        "tfrecords_path = f\"{training_dir}/tfrecords\"\n",
+        "!python dataset_tool.py create_from_images {dataset_dir} {tfrecords_path}"
       ],
       "execution_count": null,
       "outputs": []
@@ -225,20 +253,20 @@
         "id": "jOftFoyiDU3s"
       },
       "source": [
-        "%cd \"/content/drive/MyDrive/git/stylegan2-ada\"\n",
+        "%cd {stylegan2_gitdir}\n",
+        "\n",
+        "results_path = f\"{training_dir}/results\"\n",
         "\n",
         "# This name must EXACTLY match the dataset name you used when creating the .tfrecords file.\n",
-        "dataset_name = \"popart_minimalism_kitsch\"\n",
         "snapshot_count = 2  # How often should the model generate samples and a .pkl file.\n",
         "mirrored = True  # should the images be mirrored left to right?\n",
         "mirroredY = True  # Should the images be mirrored top to bottom?\n",
         "metric_list = \"fid50k_full\"  # Metrics?\n",
         "\n",
-        "# Running it for the first time? Set to ffhq(+resolution), e.g. `ffhq1024`.\n",
-        "# Resuming? Get the path to your latest .pkl file and use that.\n",
-        "resume_from = \"/content/drive/MyDrive/git/stylegan2-ada/results/00028-popart_minimalism_kitsch-mirror-mirrory-11gb-gpu-resumecustom/network-snapshot-000008.pkl\"\n",
+        "resume_from = \"ffhq1024\"  # Running it for the first time? Set to ffhq(+resolution), e.g. `ffhq1024`.\n",
+        "# resume_from = f\"{results_path}/network-snapshot-000008.pkl\"  # Resuming? Get the path to your latest .pkl file and use that.\n",
         "\n",
-        "!python train.py --outdir ./results --snap={snapshot_count} --cfg=11gb-gpu --data=./datasets/{dataset_name} --mirror={mirrored} --mirrory={mirroredY} --metrics={metric_list} --resume={resume_from}"
+        "!python train.py --outdir {results_path} --snap={snapshot_count} --cfg=11gb-gpu --data={tfrecords_path} --mirror={mirrored} --mirrory={mirroredY} --metrics={metric_list} --resume={resume_from}"
       ],
       "execution_count": null,
       "outputs": []
@@ -286,10 +314,9 @@
         "id": "74iAtJPy3UwY"
       },
       "source": [
-        "%cd /content/drive/MyDrive/git/stylegan2-ada\n",
-        "network_file=\"/content/drive/MyDrive/git/stylegan2-ada/results/00000-popart_minimalism_kitsch-mirror-mirrory-11gb-gpu-resumeffhq1024/network-snapshot-000008.pkl\"\n",
-        "outdir=\"/content/drive/MyDrive/outdir/00000-popart_minimalism_kitsch-mirror-mirrory-11gb-gpu-resumeffhq1024/network-snapshot-000008/\"\n",
-        "!python ./generate.py generate-images --outdir={outdir} --seeds=\"1000-1050\" --network={network_file}"
+        "%cd {stylegan2_gitdir}\n",
+        "network_file = f\"{results_path}/network-snapshot-000008.pkl\"\n",
+        "!python ./generate.py generate-images --outdir=f\"{outdir}/images\" --seeds=\"1000-1050\" --network={network_file}"
       ],
       "execution_count": null,
       "outputs": []
@@ -327,7 +354,7 @@
       "source": [
         "%cd /content/drive/MyDrive/git/ganart\n",
         "!git pull\n",
-        "!python ./post_process_images.py \"/content/drive/MyDrive/outdir/00028-popart_minimalism_kitsch-mirror-mirrory-11gb-gpu-resumecustom/network-snapshot-000008/\""
+        "!python ./post_process_images.py --indir f\"{outdir}/images\""
       ],
       "execution_count": null,
       "outputs": []
